--- a/lua-web-cli.html
+++ b/lua-web-cli.html
@@ -14,6 +14,7 @@
     <div class="repl">
         <code id="fengari-console"></code>
         <div class="fengari-input-container">
+            <label id="fengari-prompt" for="fengari-input">&gt; </label>
             <textarea class="lua" id="fengari-input" rows="1"></textarea>
         </div>
     </div>
@@ -37,9 +38,9 @@
         local hljs = js.global.hljs
 
         local output = document:getElementById("fengari-console")
+        local prompt = document:getElementById("fengari-prompt")
         local input = document:getElementById("fengari-input")
-
-        assert(output and input)
+        assert(output and prompt and input)
 
         local function triggerEvent(el, type)
             local e = document:createEvent("HTMLEvents")
@@ -67,7 +68,7 @@
         local function doREPL()
             do
                 local line = document:createElement("span")
-                line:appendChild(document:createTextNode(_G._PROMPT or "> "))
+                line:appendChild(document:createTextNode(prompt.textContent))
                 local item = document:createElement("span")
                 item.class = "lua"
                 item.style.padding = "0"
@@ -103,6 +104,7 @@
             end
 
             input.value = ""
+            prompt.textContent = _G._PROMPT or "> "
 
             triggerEvent(output, "change")
         end
