lua-web-cli.html: use a pre tag so that newlines are preserved

--- a/lua-web-cli.html
+++ b/lua-web-cli.html
@@ -71,10 +71,11 @@
             do
                 local line = document:createElement("span")
                 line:appendChild(document:createTextNode(prompt.textContent))
-                local item = document:createElement("span")
+                local item = document:createElement("pre")
                 item.class = "lua"
                 item.style.padding = "0"
                 item.style.display = "inline"
+                item.style["white-space"] = "pre-wrap"
                 item.textContent = input.value
                 hljs:highlightBlock(item)
                 line:appendChild(item)
