The DOM uses .className not .class

--- a/lua-web-cli.html
+++ b/lua-web-cli.html
@@ -72,7 +72,7 @@
                 local line = document:createElement("span")
                 line:appendChild(document:createTextNode(prompt.textContent))
                 local item = document:createElement("pre")
-                item.class = "lua"
+                item.className = "language-lua"
                 item.style.padding = "0"
                 item.style.display = "inline"
                 item.style["white-space"] = "pre-wrap"
